[project]
name = "survey13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "click>=8.1.7",
    "django>=5.1.7",
    "loguru>=0.7.2",
    "openpyxl>=3.1.3",
    "wordcloud>=1.9.4",
]

[project.scripts]
create_tables = "survey13.scripts.create_tables:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ipython>=8.34.0",
]

[tool.djlint]
profile="django"
